--- a/endpoints/rootEndpoint/views/root-get-page/index.ejs
+++ b/endpoints/rootEndpoint/views/root-get-page/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
@@ -73,7 +73,7 @@
 							alt="<%= builder.header.title %> Logo"
 						/>
 						<div>
-							<p>Saved Products</p>
+							<p>Produtos Salvos</p>
 						</div>
 					</div>
 				</div>
@@ -86,7 +86,7 @@
 										<div>
 											<button remove-from-saved-button>
 												<i class="fa-solid fa-xmark"></i>
-												Remove Product
+												Remover Produto
 											</button>
 										</div>
 										<div>
@@ -124,7 +124,7 @@
 							alt="<%= builder.header.title %> Logo"
 						/>
 						<div>
-							<p>Categories</p>
+							<p>Categorias</p>
 						</div>
 					</div>
 				</div>
@@ -157,7 +157,7 @@
 
 				<!--search-container-->
 				<div search-container class="search-container">
-					<input type="text" placeholder="What are you looking for?" />
+					<input type="text" placeholder="O que você procura?" />
 					<div>
 						<div search-results>
 							<template>
@@ -249,7 +249,7 @@
 								<div>
 									<button open-saved-aside-menu-button save-product-button>
 										<i class="fa-solid fa-bookmark"></i>
-										Save Product
+										Salvar Produto
 									</button>
 								</div>
 								<div>
@@ -274,7 +274,7 @@
 							</div>
 							<a target="_blank" href="/api/order/<%= product.id %>">
 								<i class="fa-brands fa-whatsapp"></i>
-								Order Product
+								Pedir Produto
 							</a>
 						</div>
 						<% }) %>
