--- a/endpoints/adminEndpoint/views/admin-get-page/styles/main/main.css
+++ b/endpoints/adminEndpoint/views/admin-get-page/styles/main/main.css
@@ -90,6 +90,7 @@ div.table-section-container__table-container > table {
   border-radius: 7px;
   overflow: hidden;
   background-color: var(--primary-color);
+  table-layout: auto;
 }
 div.table-section-container__table-container > table thead,
 div.table-section-container__table-container > table tbody {
@@ -97,19 +98,78 @@ div.table-section-container__table-container > table tbody {
 }
 div.table-section-container__table-container > table thead {
   width: 100%;
-  user-select: none;
   height: 41px;
   color: white;
 }
 div.table-section-container__table-container > table tbody > tr {
+  width: 100%;
   background-color: white;
 }
 div.table-section-container__table-container > table tbody > tr > td {
-  min-width: 301px;
   height: 59.9px;
 }
-div.table-section-container__table-container > table tbody > tr > td.--sortable-item {
-  width: 100%;
+div.table-section-container__table-container > table tbody > tr > td.regular-container {
+  min-width: 296px;
+}
+div.table-section-container__table-container > table tbody > tr > td.action-container {
+  width: 175px;
+  min-width: 175px;
+}
+div.table-section-container__table-container > table tbody > tr > td.action-container.--no-drag-button > div > div > button:first-of-type {
+  display: none;
+}
+div.table-section-container__table-container > table tbody > tr > td.action-container.--no-send-button > div > div > button:nth-of-type(2) {
+  display: none;
+}
+div.table-section-container__table-container > table tbody > tr > td.action-container > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+div.table-section-container__table-container > table tbody > tr > td.action-container > div > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 14px;
+  width: 175px;
+  position: relative;
+}
+div.table-section-container__table-container > table tbody > tr > td.action-container > div > div > button {
+  color: var(--primary-color);
+  font-size: 16.8px;
+  padding: 7px;
+}
+div.table-section-container__table-container > table tbody > tr > td.action-container > div > div > div.action-container__action-info-container {
+  transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
+  right: 14px;
+}
+div.table-section-container__table-container > table tbody > tr > td.action-container > div > div > div.action-container__action-info-container.--loading i.action-container__cell-info-container__loading {
+  display: block;
+}
+div.table-section-container__table-container > table tbody > tr > td.action-container > div > div > div.action-container__action-info-container.--error i:nth-of-type(2) {
+  display: block;
+}
+div.table-section-container__table-container > table tbody > tr > td.action-container > div > div > div.action-container__action-info-container.--ok i:last-of-type {
+  display: block;
+}
+div.table-section-container__table-container > table tbody > tr > td.action-container > div > div > div.action-container__action-info-container i {
+  display: none;
+}
+div.table-section-container__table-container > table tbody > tr > td.action-container > div > div > div.action-container__action-info-container i.action-container__cell-info-container__loading {
+  width: 16.1px;
+  height: 16.1px;
+  border-radius: 100%;
+  border: 2.8px solid var(--regular-green);
+  border-top: 2.8px solid transparent;
+  animation: spinner 1.4s linear infinite forwards;
+}
+div.table-section-container__table-container > table tbody > tr > td.action-container > div > div > div.action-container__action-info-container > i:nth-of-type(2) {
+  color: red;
+}
+div.table-section-container__table-container > table tbody > tr > td.action-container > div > div > div.action-container__action-info-container > i:last-of-type {
+  color: var(--regular-green);
 }
 
 div.cell-container {
@@ -169,7 +229,7 @@ div.cell-container__file-input-container input {
 }
 div.cell-container__file-input-container a {
   white-space: nowrap;
-  max-width: 140px;
+  max-width: 70%;
   overflow: hidden;
   text-overflow: ellipsis;
   padding: 0px 3.5px;
@@ -234,63 +294,6 @@ div.cell-container__select-container select:focus {
 }
 div.cell-container__select-container select > option {
   font-size: 15.4px;
-}
-
-td.action-container.--no-drag-button > div > div > button:first-of-type {
-  display: none;
-}
-td.action-container.--no-send-button > div > div > button:nth-of-type(2) {
-  display: none;
-}
-td.action-container > div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-td.action-container > div > div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 14px;
-  width: 175px;
-  position: relative;
-}
-td.action-container > div > div > button {
-  color: var(--primary-color);
-  font-size: 16.8px;
-  padding: 7px;
-}
-td.action-container > div > div > div.action-container__action-info-container {
-  transform: translateY(-50%);
-  position: absolute;
-  top: 50%;
-  right: 0px;
-}
-td.action-container > div > div > div.action-container__action-info-container.--loading i.action-container__cell-info-container__loading {
-  display: block;
-}
-td.action-container > div > div > div.action-container__action-info-container.--error i:nth-of-type(2) {
-  display: block;
-}
-td.action-container > div > div > div.action-container__action-info-container.--ok i:last-of-type {
-  display: block;
-}
-td.action-container > div > div > div.action-container__action-info-container i {
-  display: none;
-}
-td.action-container > div > div > div.action-container__action-info-container i.action-container__cell-info-container__loading {
-  width: 16.1px;
-  height: 16.1px;
-  border-radius: 100%;
-  border: 2.8px solid var(--regular-green);
-  border-top: 2.8px solid transparent;
-  animation: spinner 1.4s linear infinite forwards;
-}
-td.action-container > div > div > div.action-container__action-info-container > i:nth-of-type(2) {
-  color: red;
-}
-td.action-container > div > div > div.action-container__action-info-container > i:last-of-type {
-  color: var(--regular-green);
 }
 
 @keyframes spinner {
