--- a/endpoints/adminEndpoint/views/admin-login-get-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-login-get-page/index.ejs
@@ -27,8 +27,14 @@
 				--dark-gray: rgb(20, 20, 20);
 			}
 		</style>
-		<link rel="stylesheet" href="/admin-login-get-page/styles/index/index.css" />
-		<link rel="stylesheet" href="/admin-login-get-page/styles/header/header.css" />
+		<link
+			rel="stylesheet"
+			href="/admin-login-get-page/styles/index/index.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="/admin-login-get-page/styles/header/header.css"
+		/>
 		<link rel="stylesheet" href="/admin-login-get-page/styles/main/main.css" />
 
 		<!--font-awesome-->
@@ -41,11 +47,13 @@
 		/>
 
 		<!--scripts-->
-		<script defer type="module" src="/admin-login-get-page/scripts/index.js"></script>
+		<script
+			defer
+			type="module"
+			src="/admin-login-get-page/scripts/index.js"
+		></script>
 	</head>
 	<body>
-
-		<!--header-->
 		<header>
 			<div>
 				<a href="/">
@@ -57,8 +65,6 @@
 				</a>
 			</div>
 		</header>
-
-		<!--main-->
 		<main>
 			<div>
 				<div>
@@ -72,14 +78,26 @@
 							<div>
 								<div>
 									<div>
-										<input username id="username" type="text" name="username" placeholder="Username" />
-										<label for="username">Username</label>
+										<input
+											username
+											id="username"
+											type="text"
+											name="username"
+											placeholder="Usuário"
+										/>
+										<label for="username">Usuário</label>
 									</div>
 								</div>
 								<div>
 									<div>
-										<input password id="password" type="password" name="password" placeholder="Password" />
-										<label for="password">Password</label>
+										<input
+											password
+											id="password"
+											type="password"
+											name="password"
+											placeholder="Senha"
+										/>
+										<label for="password">Senha</label>
 									</div>
 								</div>
 								<button>
@@ -93,7 +111,11 @@
 			</div>
 			<div>
 				<div>
-					<svg xmlns="http://www.w3.org/2000/svg" height="0.611111in" viewBox="0 0 8000 55">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						height="0.611111in"
+						viewBox="0 0 8000 55"
+					>
 						<path
 							id="Selection"
 							d="M 0.00,2.00
