--- a/endpoints/adminEndpoint/views/admin-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-page/index.ejs
@@ -89,15 +89,15 @@
 				<div>
 					<ul>
 						<li>
-							<a href="#">
+							<a href="/admin/change/username">
 								<i class="fa-solid fa-user"></i>
-								<i>Mudar nome de usuário</i>
+								<i>Trocar Usuário</i>
 							</a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="/admin/change/password">
 								<i class="fa-solid fa-lock"></i>
-								<i>Mudar senha</i>
+								<i>Trocar Senha</i>
 							</a>
 						</li>
 					</ul>
