--- a/endpoints/adminEndpoint/views/admin-form-page/styles/main/main.css
+++ b/endpoints/adminEndpoint/views/admin-form-page/styles/main/main.css
@@ -1,9 +1,11 @@
-form > div > div input, form > div > div label, form > div > button {
+form > div > div input, form > div > div label, form > div > button,
+form > div a {
   font-size: 14px;
 }
 
 @media (min-width: 1700px) {
-  form > div > div input, form > div > div label, form > div > button {
+  form > div > div input, form > div > div label, form > div > button,
+  form > div a {
     font-size: 15.4px;
   }
 }
@@ -85,7 +87,10 @@ form > div {
   flex-direction: column;
   gap: 18.9px;
 }
-form > div > button {
+form > div > button,
+form > div a {
+  align-items: center;
+  justify-content: center;
   width: 100%;
   gap: 7px;
   padding: 10.5px;
@@ -95,8 +100,30 @@ form > div > button {
   color: white;
   transition: ease-in-out 0.35s;
 }
+form > div > button.--on,
+form > div a.--on {
+  display: flex;
+}
+form > div > button.--off,
+form > div a.--off {
+  display: none;
+}
 form > div > div {
   position: relative;
+}
+form > div > div button {
+  display: none;
+  transform: translate(-50%, -50%);
+  color: var(--regular-gray);
+  position: absolute;
+  top: 50%;
+  right: 10.5px;
+}
+form > div > div button.--on {
+  display: block;
+}
+form > div > div button i.fa-eye-slash {
+  transform: translateX(10%);
 }
 form > div > div label {
   cursor: text;
