--- a/endpoints/adminEndpoint/views/admin-page/styles/modules/modules.scss
+++ b/endpoints/adminEndpoint/views/admin-page/styles/modules/modules.scss
@@ -113,7 +113,7 @@
 				color: var(--dark-gray);
 				font-family: var(--font-bold);
 				font-style: normal;
-				font-size: 15.4px;
+				font-size: 16.8px;
 				overflow: hidden;
 				text-overflow: ellipsis;
 			}
@@ -127,6 +127,7 @@
 
 		button {
 			i:first-of-type {
+				display: block;
 				width: 8.4px;
 				height: 8.4px;
 				border-radius: 100%;
