--- a/endpoints/rootEndpoint/views/root-page/styles/main/main.css
+++ b/endpoints/rootEndpoint/views/root-page/styles/main/main.css
@@ -259,8 +259,7 @@ div.product-section-container > div > div:first-of-type h1 {
 }
 div.product-section-container > div > div:first-of-type h1::before {
   content: "";
-  width: 10.5px;
-  height: 10.5px;
+  padding: 5.6px;
   border-radius: 100%;
   background-color: var(--primary-color);
   transform: translateY(-50%);
