--- a/endpoints/adminEndpoint/views/admin-form-page/styles/main/main.scss
+++ b/endpoints/adminEndpoint/views/admin-form-page/styles/main/main.scss
@@ -145,6 +145,7 @@ form {
 			}
 
 			input {
+				&:-webkit-autofill + label,
 				&:not(:placeholder-shown) + label {
 					color: var(--regular-gray);
 					padding: 0px 7px;
