--- a/endpoints/adminEndpoint/views/admin-form-page/styles/main/main.css
+++ b/endpoints/adminEndpoint/views/admin-form-page/styles/main/main.css
@@ -64,23 +64,55 @@ main > div:last-of-type > div:first-of-type svg path {
 
 form {
   width: 100%;
-  padding-top: 24.5px;
+  padding-top: 21px;
 }
-form > span {
+form > div:first-of-type {
+  padding-bottom: 7px;
+}
+form > div:first-of-type > div {
   display: none;
-  font-size: 13.3px;
-  padding-bottom: 14px;
+  align-items: center;
+  justify-content: left;
+  gap: 4.2px;
+  padding-bottom: 10.5px;
 }
-form > span.--not-ok {
+form > div:first-of-type > div p i {
+  font-style: normal;
+  font-size: 14.7px;
+}
+form > div:first-of-type > div p > i:first-of-type {
+  font-size: 14px;
+}
+form > div:first-of-type.--error > div:first-of-type {
   display: block;
+}
+form > div:first-of-type.--error > div:first-of-type p {
   color: red;
 }
-form > span.--ok {
+form > div:first-of-type.--ok > div:nth-of-type(2) {
   display: block;
+}
+form > div:first-of-type.--ok > div:nth-of-type(2) p {
   color: var(--regular-green);
 }
-form > span i {
-  font-style: normal;
+form > div:first-of-type.--loading > div:last-of-type {
+  display: block;
+}
+form > div:first-of-type.--loading > div:last-of-type p {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 4.9px;
+  color: var(--regular-green);
+}
+form > div:first-of-type.--loading > div:last-of-type p > i:first-of-type {
+  display: inline-block;
+  width: 14px;
+  height: 14px;
+  border-radius: 100%;
+  border: 2.8px solid var(--regular-green);
+  border-top: 2.8px solid transparent;
+  animation: spinner 1.4s linear infinite forwards;
 }
 form > div {
   display: flex;
@@ -182,6 +214,15 @@ form > div > div input:-ms-input-placeholder {
 }
 form > div > div input:-webkit-autofill, form > div > div input:-webkit-autofill:hover, form > div > div input:-webkit-autofill:focus, form > div > div input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
+}
+
+@keyframes spinner {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
