--- a/endpoints/adminEndpoint/views/admin-page/index.ejs
+++ b/endpoints/adminEndpoint/views/admin-page/index.ejs
@@ -48,11 +48,7 @@
 
 		<!--scripts-->
 		<script defer type="module" src="/admin-page/scripts/index.js"></script>
-		<script
-			defer
-			type="module"
-			src="/admin-page/scripts/builder.js"
-		></script>
+		<script defer type="module" src="/admin-page/scripts/builder.js"></script>
 	</head>
 	<body>
 		<div warning class="warning-container">
@@ -158,9 +154,9 @@
 												<i class="fa-solid fa-image"></i>
 											</label>
 											<input id="icon" type="file" accept="image/*" />
-											<a href="<%= builder.header.icon %>" target="_blank"
-												>Ícone</a
-											>
+											<a href="<%= builder.header.icon %>" target="_blank">
+												Ícone
+											</a>
 										</div>
 										<div cell-info class="cell-container__cell-info-container">
 											<i
@@ -190,9 +186,9 @@
 												<i class="fa-solid fa-image"></i>
 											</label>
 											<input id="logo" type="file" accept="image/*" />
-											<a href="<%= builder.header.logo %>" target="_blank"
-												>Logo</a
-											>
+											<a href="<%= builder.header.logo %>" target="_blank">
+												Logo
+											</a>
 										</div>
 										<div cell-info class="cell-container__cell-info-container">
 											<i
